# unipy

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  __init__.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-linting.yml  test_comprehensive.yml  test_pull_requests.yml
src/math/: linalg.py
src/unipy/: __init__.py  core.py  linalg.py  types.py  utilities.py
tests/: test_core.py  test_core_gpu.py  test_linalg.py  test_linalg_gpu.py
